--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         {{message}}
        </span>
 
-        <input type="date" v-model="newdate.inputdata" class="newdate">
+        <input type="date" v-model="newdate.mydata" class="newdate" v-on:click="Getdata(newdate)">
 
       </nav>
-
+  
         <div v-for="info in info" :key="info.img" class="polaroid">
             
             <img :src="info.img_src" alt="Nasa img" class="Imgsize">
