--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         {{message}}
        </span>
 
-        <input type="date" v-model="newdate.mydata" class="newdate" v-on:click="Getdata(newdate)">
-
+        <input type="date" v-model="newdate" class="newdate" v-on:click="Getdata(newdate)">
+        
       </nav>
   
         <div v-for="info in info" :key="info.img" class="polaroid">
